# fringe-contrast

./: README.md  main.py  pyproject.toml
src/fringe_contrast/: __init__.py  beam.py  interferometer.py  trajectories.py
