[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fringe-contrast"
version = "0.0.1"
authors = [
  { name="Joshua Read", email="author@example.com" },
]
description = "Inteferometry fringe contrast model"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'numpy',
  'scipy',
  'mkdocs',
]

[project.urls]
"Homepage" = "https://github.com/josh-read/fringe-contrast"
"Bug Tracker" = "https://github.com/josh-read/fringe-contrast/issues"